test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-documentation-viewer-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: api-documentation-viewer
